--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL = "http://localhost:4001"
+# VITE_BACKEND_URL = "http://localhost:4001"
+VITE_BACKEND_URL = "streaming-server-five.vercel.app"
