--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-# PORT = 4001
-MONGODB_URI = "mongodb+srv://yhsdaniel:TKmqcjw3q2TVVsXb@cluster0.stm7ej8.mongodb.net/LoginUser"
+PORT=5000
+MONGODB_URI=mongodb+srv://yhsdaniel:TKmqcjw3q2TVVsXb@cluster0.stm7ej8.mongodb.net/LoginUser
 # TKmqcjw3q2TVVsXb
