--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,12 @@
 {
     "version":2,
     "builds": [
-      { 
-        "src": "app.js", 
-        "use": "@vercel/node" 
-      }
+      { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+        {
+          "src": "/(.*)",
+          "dest": "/"
+        }
+    ]
   }
