--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/server/server.js"
+        "destination": "/server/app.js"
       }
     ]
   }
