--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL = "http://localhost:5000"
-VITE_BACKEND_URL = "https://streaming-server-five.vercel.app"
+# VITE_BACKEND_URL = "https://streaming-server-five.vercel.app"
+VITE_BACKEND_URL = "http://localhost:5000"
