--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,5 @@ PORT=5000
 MONGODB_URI=mongodb+srv://yhsdaniel:TKmqcjw3q2TVVsXb@cluster0.stm7ej8.mongodb.net/LoginUser
 TOKEN_SECRET=yourrandomsecret
 TMDB_KEY=b5dc2ae423fdfd220737f5f979a6c7c1
+NODE_ENV=production
 # TKmqcjw3q2TVVsXb
