--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://netex-app.vercel.app",
   "name": "client",
   "private": true,
   "version": "0.0.0",
