--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,6 +6,7 @@
         "use": "@vercel/node"
       }
     ],
+    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
     "rewrites": [
       {
         "source": "/(.*)",
