--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,11 +6,11 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
+    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }],
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/app.js"
+        "destination": "/"
       }
     ]
   }
