--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,5 +11,6 @@
         "source": "/(.*)",
         "destination": "/"
       }
-    ]
+    ],
+    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }]
   }
