--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,10 +2,11 @@
     "version":2,
     "builds": [
       {
-        "src": "./app.js",
+        "src": "*.js",
         "use": "@vercel/node"
       }
     ],
+    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }],
     "rewrites": [
       {
         "source": "/(.*)",
