--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,11 +6,5 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }],
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
+    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }]
   }
