--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,5 +6,10 @@
         "use": "@vercel/node"
       }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }]
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
   }
