--- a/server/vercel.json
+++ b/server/vercel.json
@@ -9,8 +9,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/*.js"
+        "destination": "/"
       }
-    ],
-    "routes": [{ "src": "/(.*)", "dest": "/", "status": 200 }]
+    ]
   }
