--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
     "version":2,
     "builds": [
       {
-        "src": "/*.js",
+        "src": "./app.js",
         "use": "@vercel/node"
       }
     ],
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/"
+        "destination": "/" 
       }
     ]
   }
