--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,12 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "main": "app.js",
+  "main": "api/app.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
