--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,19 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "nodemon": "^3.1.0"
   },
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "main": "app.js",
+  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
