--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "/[^.]+",
+      "dest": "/",
+      "status": 200
     }
+  ],
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
