--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,8 +10,7 @@
     {
       "src": "/[^.]+",
       "dest": "/",
-      "status": 200,
-      "handle": "filesystem"
+      "status": 200
     }
   ]
 }
