--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,10 +7,6 @@
     }
   ],
   "routes": [
-    { "src": "/", "dest": "/", "status": 200 },
-    { "src": "/register", "dest": "/", "status": 200 },
-    { "src": "/dashboard", "dest": "/", "status": 200 },
-    { "src": "/movies", "dest": "/", "status": 200 },
-    { "src": "/tvshows", "dest": "/", "status": 200 }
+    { "src": "/", "dest": "/", "status": 200 }
   ]
 }
