--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,6 +7,9 @@
     }
   ],
   "routes": [
-    { "src": "/", "dest": "/", "status": 200 }
+    { 
+      "src": "/(.*)",
+      "dest": "/index.js" 
+    }
   ]
 }
