--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,11 @@
     "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.1.3"
   },
   "name": "server",
   "version": "1.0.0",
@@ -19,7 +19,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "server": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
