--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.10",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.4",
     "eslint-config-prettier": "^9.1.0",
