--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "terser": "^5.36.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
